<resources>
    <string name="app_name">FiatFix</string>
    <string name="have_some_fiat">Have some Fiat?</string>
    <string name="lets_help_you_fix_it">Lets help you fix it</string>
    <string name="in_split_seconds">In split seconds fund your local account and invest trending crypto tokens</string>
    <string name="sign_up">Sign up</string>
    <string name="use_google_or_facebook">Use google or facebook</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="already_have_an_account">Already have an account?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fund_and_invest">Fund and Invest</string>
    <string name="quickly_fund_and_invest">Quickly fund and invest in market trending coin immediately from you local account</string>
    <string name="learn_to_invest">Learn to invest</string>
    <string name="live_investments">Live Investments</string>
    <string name="active">Active</string>
    <string name="passive">Passive</string>
    <string name="trade_view">Trade View</string>
    <string name="guaranteed_investments">Guaranteed Investments</string>
    <string name="today_s_chart">Today Chart</string>
    <string name="buy_or_sell_crypto">Buy or Sell Crypto</string>
    <string name="buy">Buy</string>
    <string name="details">Details</string>
    <string name="investment">Investment</string>
    <string name="amount_invested">Amount Invested</string>
    <string name="total_roi">Total ROI</string>
    <string name="recycle_investment">Recycle investment</string>
    <string name="tap_to_close_investment">Tap to close investment</string>
    <string name="appreciation_rate">Appreciation Rate</string>
    <string name="depreciation_rate">Depreciation Rate</string>
    <string name="your_roi_today">Your ROI Today</string>
    <string name="date_due">Date Due</string>
    <string name="learn">Learn</string>
    <string name="get_understanding_on_terminologies_used_in_our_product">Get understanding on terminologies used in our product.</string>
    <string name="profile">Profile</string>
    <string name="invest">Invest</string>
    <string name="wallet">Wallet</string>
    <string name="notification">Notifications</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="choose_investment">Choose Investment</string>
    <string name="get_understanding">Get understanding on terminologies used in our product.</string>
    <string name="investment_amount">Investment Amount</string>
    <string name="payment_options">Payment options</string>
    <string name="card">Card</string>
    <string name="bank_transfer">Bank Transfer</string>
    <string name="card_details">Card Details</string>
    <string name="card_name">Card Name</string>
    <string name="cvv">CVV</string>
    <string name="card_number">Card Number</string>
    <string name="cancel">Cancel</string>
    <string name="continues">Continue</string>
</resources>