<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/profileFragment"
            android:title="@string/profile" />
        <item
            android:id="@+id/chooseInvestmentFragment"
            android:title="@string/invest" />
        <item
            android:id="@+id/learnFragment"
            android:title="@string/learn" />
        <item
            android:id="@+id/walletFragment"
            android:title="@string/wallet" />
        <item
            android:id="@+id/notificationFragment"
            android:title="@string/notification" />
        <item
            android:id="@+id/settingsFragment"
            android:title="@string/settings"/>
        <item
            android:id="@+id/logoutFragment"
            android:title="@string/logout" />
    </group>
</menu>